[package]
name = "vid-prob"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = "0.2"
oorandom = "11"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "forbid"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
